[tool.poetry]
name = "rmq-tool"
version = "0.01"
description = "rqm tool"
authors = ["sky1su"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pika = "^1.3.2"
jsonschema = "^4.23.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
